<resources>
    <string name="app_name">TipCalculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="calculate">Calculate</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="good_10">Good(10%)</string>
    <string name="better_15">Better(15%)</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="round_tip">Round Tip</string>
    <string name="tip_amount">Tip Amount :</string>
</resources>
