<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/outlinedTextField"
    app:layout_constraintTop_toTopOf="@id/outlinedTextField"
    app:layout_constraintBottom_toBottomOf="@id/outlinedTextField"
    android:src="@drawable/ic_baseline_store_mall_directory_24"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_width="305dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/cost_of_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:boxBackgroundMode="outline"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/textView2"
    app:layout_constraintTop_toTopOf="@id/textView2"
    app:layout_constraintBottom_toBottomOf="@id/textView2"
    android:src="@drawable/ic_baseline_room_service_24"
    />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="@id/outlinedTextField"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField"
        android:layout_marginTop="10dp"
        style="@style/Widget.TipTime.TextView"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/outlinedTextField"
        app:layout_constraintEnd_toEndOf="@id/outlinedTextField"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        >

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/amazing_20"
            android:buttonTint="?attr/colorPrimary"/>

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/better_15"
            android:buttonTint="?attr/colorPrimary"/>

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/good_10"
            android:buttonTint="?attr/colorPrimary"/>
    </RadioGroup>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Switch"
        app:layout_constraintBottom_toBottomOf="@id/Switch"
        app:layout_constraintTop_toTopOf="@id/Switch"
        android:src="@drawable/ic_baseline_arrow_outward_24"
        />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:switchPadding="75dp"
        android:text="@string/round_tip"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        android:layout_marginTop="10dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Button
        android:id="@+id/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/Switch"
        app:layout_constraintEnd_toEndOf="@id/Switch"
        app:layout_constraintTop_toBottomOf="@id/Switch"
        android:layout_marginTop="10dp"
        android:text="@string/calculate"
        />

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/Switch"
        app:layout_constraintTop_toBottomOf="@id/Button"
        style="@style/Widget.TipTime.TextView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
